--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Flask==0.10.1
+Flask-WTF==0.12
 Jinja2==2.8
 MarkupSafe==0.23
+SQLAlchemy==1.0.11
+WTForms==2.1
 Werkzeug==0.11.4
 argparse==1.2.1
 itsdangerous==0.24
+numpy==1.10.4
 wsgiref==0.1.2
